--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header.container{background:transparent;}
 	padding-left: 0px !important;
 	padding-right: 0px !important;
 }
-.navbar .nav > li {border-left:1px solid #e4e4e4;}
+.navbar .nav > li {border-right:1px solid #e4e4e4;}
 .navbar .nav > li > a {
 	color: #666;
 	border-top:4px solid #fff;
