--- a/css/style.css
+++ b/css/style.css
@@ -2458,4 +2458,11 @@ ul.links-list-alt {margin-top: 20px;margin-bottom: 12px;}
 ul.links-list-alt li{line-height:24px;padding-left:12px;}
 ul.links-list-alt li a{font-size: 14px;}
 #contact-form {padding-left:12px;}
-	
+.span9.news-detail{float: none !important; margin:0 auto !important;}
+.span9.news-detail  .sub-title{text-align: center;}
+.span9.news-detail  .sub-title span{margin-right: 15px; color:#999;}
+.span9.news-detail  .sub-title span i{margin-right:5px;opacity: 0.4;}
+.span9.news-detail .content{padding:25px;}
+.span9.news-detail .content p{margin-bottom: 15px; text-indent: 2em;}
+
+
